# Snake

./: .gitignore  CMakeLists.txt  Fruit.cpp  Fruit.hpp  LICENSE  LICENSE.md  conanfile.txt  main.cpp
include/: Borders.hpp  Common.hpp  Fruit.hpp  Game.hpp  Snake.hpp  Window.hpp  World.hpp
src/: Borders.cpp  Borders.hpp  CMakeLists.txt  Common.hpp  Fruit.cpp  Fruit.hpp  Game.cpp  Snake.cpp  Snake.hpp  Window.cpp  World.cpp  World.hpp  main.cpp
